@@ -21,6 +21,12 @@
 
 	* patches/icedtea-cacao-instrument-Makefile.patch: New file.
 
+2007-09-13  Lillian Angel  <langel@redhat.com>
+
+	* Makefile.am: Added JRE_RELEASE_VERSION and
+	HOTSPOT_RELEASE_VERSION to environment. Removed BUILD_NUMBER.
+	* Makefile.in: Regenerated
+
 2007-09-13  Andrew Haley  <aph@redhat.com>
 
 	* Makefile.am (icedtea-debug): Correct dependencies.
